kubernetes/applications/matrix/tuwunel/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tuwunel
  labels:
    app: tuwunel
spec:
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: tuwunel
  replicas: 1
  template:
    metadata:
      labels:
        app: tuwunel
    spec:
      containers:
        - name: tuwunel
          image: jevolk/tuwunel:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8448
          volumeMounts:
            - mountPath: "/var/lib/tuwunel"
              name: tuwunel-volume-mount
      volumes:
        - name: tuwunel-volume-mount
          persistentVolumeClaim:
            claimName: tuwunel-volume-claim
---
apiVersion: v1
kind: Service
metadata:
  name: tuwunel
spec:
  type: ClusterIP
  selector:
    app: tuwunel
  ports:
    - protocol: TCP
      port: 8448
      targetPort: 8448
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: tuwunel-allow-encoded-chars
spec:
  encodedCharacters:
    allowEncodedHash: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tuwunel
spec:
  routes:
    - kind: Rule
      match: Host(`riichi.me`) && PathPrefix(`/.well-known/matrix`)
      priority: 20
      services:
        - name: tuwunel
          port: 8448
      middlewares:
        - name: tuwunel-allow-encoded-chars
    - kind: Rule
      match: Host(`matrix.riichi.me`)
      priority: 10
      services:
        - name: tuwunel
          port: 8448
      middlewares:
        - name: tuwunel-allow-encoded-chars
